--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="assets/img/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -48,11 +46,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
-
       <h1 class="logo mr-auto"><a href="index.html">Colegio Superior de Ciencias Valle de Casta&ntilde;o</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--<a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpg" alt="" class="img-fluid"></a>-->
-
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="#header">Inicio</a></li>
@@ -61,10 +57,8 @@
           <li><a href="#yosoyvalle">¡YO SOY VALLE!</a></li>
           <li><a href="#bibliotecas">Bibliotecas</a></li>
           <li><a href="#contacto">Contacto</a></li>
-
         </ul>
       </nav><!-- .nav-menu -->
-
     </div>
   </header><!-- End Header -->
 
@@ -77,7 +71,6 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="nosotros" class="about">
       <div class="container">
@@ -86,7 +79,6 @@
           
           <h2>Acerca de <span>Nosotros</span></h2>
           <p>Desde el a&ntilde;o 2000, Colegio Superior de Ciencias «Valle de Casta&ntilde;o» le ha brindado a sus estudiantes un ambiente de aprendizaje amplio y diverso. Nuestros m&eacute;todos de ense&ntilde;anza &uacute;nicos sirven como herramienta para que nuestros alumnos alcancen el &eacute;xito con el que siempre so&ntilde;aron. Fomentamos el crecimiento, el aprendizaje y la creatividad diaria entre nuestros estudiantes y empleados.</p>
-        
         </div>
 
         <div class="row content">
@@ -115,9 +107,9 @@
       <div class="container">
 
         <div class="text-center">
-          <h3>Noticias Relevantes</h3>
-          <p>Ent&eacute;rate de los sucesos m&aacute;s importantes de nuestra escuela, as&iacute; como lo relacionado con la educaci&oacute;n en nuestro estado.</p>
-          <a class="cta-btn" href="#">Ver m&aacute;s</a>
+          <h3>Aula Virtual</h3>
+          <p>Conoce nuestra Plataforma Virtual</p>
+          <a class="cta-btn" href="https://aulavirtual.valledecastano.edu.mx/" target="_blank">Ir al sitio</a>
         </div>
 
       </div>
@@ -207,13 +199,25 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/yosoyvalle/aula-virtual.jpg" class="img-fluid" alt="Inscripciones">
+                <div class="social">
+                  <a href="blog/2021/01012021.html">
+                    <h4>Inscripciones</h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/yosoyvalle/futbol.jpg" class="img-fluid" alt="Partido de F&uacute;tbol">
                 <div class="social">
-                  <a href="#">
+                  <a href="blog/2021/02012021.html">
                     <h4>Partido de F&uacute;tbol</h4>
                   </a>
                 </div>
@@ -226,7 +230,7 @@
               <div class="member-img">
                 <img src="assets/img/yosoyvalle/altar-muertos.jpg" class="img-fluid" alt="Altar de Muertos">
                 <div class="social">
-                  <a href="#">
+                  <a href="blog/2021/03012021.html">
                     <h4>Altar de Muertos</h4>
                   </a>
                 </div>
@@ -239,21 +243,8 @@
               <div class="member-img">
                 <img src="assets/img/yosoyvalle/graduados.jpg" class="img-fluid" alt="Generaci&oacute;n 2018-2020">
                 <div class="social">
-                  <a href="#">
+                  <a href="blog/2021/04012021.html">
                     <h4>Generaci&oacute;n 2018-2020</h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/yosoyvalle/aula-virtual.jpg" class="img-fluid" alt="Aula Virtual">
-                <div class="social">
-                  <a href="https://aulavirtual.valledecastano.edu.mx/" target="_blank">
-                    <h4>Aula Virtual</h4>
                   </a>
                 </div>
               </div>
