--- a/oferta-educativa/lae.html
+++ b/oferta-educativa/lae.html
@@ -22,10 +22,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="../assets/img/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="../assets/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
-  <link rel="manifest" href="../manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -87,19 +85,12 @@
           </button>
           <div id="collapse1" class="collapse">
             <ul>
-              <li>Sociolog&iacute;a Jur&iacute;dica</li>
-              <li>Teor&iacute;a del Estado</li>
-              <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
-              <li>Fundamentos del Derecho</li>
-              <li>Historia del Derecho</li>
-              <li>Derecho Romano I</li>
+              <li>Empresa y Contexto Mundial</li>
               <li>Ingl&eacute;s I</li>
-              Empresa y Contexto Mundial
-Inglés I
-Contabilidad General
-Administración I
-Matemáticas I
-Metodología de la Investigación
+              <li>Contabilidad General</li>
+              <li>Administraci&oacute;n I</li>
+              <li>Matem&aacute;ticas I</li>
+              <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
             </ul>    
           </div>
          </div>
@@ -110,19 +101,12 @@ Metodología de la Investigación
           </button>
           <div id="collapse2" class="collapse">
             <ul>
-              <li>Metodolog&iacute;a Jur&iacute;dica</li>
-              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
-              <li>Teor&iacute;a del Derecho</li>
-              <li>Acto Jur&iacute;dico y Personal</li>
-              <li>Derecho Romano II</li>
-              <li>Teor&iacute;a de la Constituci&oacute;n</li>
+              <li>Microeconom&iacute;a</li>
               <li>Ingl&eacute;s II</li>
-              Microeconomía
-Inglés II
-Teoría de la Comunicación
-Contabilidad Administrativa
-Administración II
-Matemáticas II
+              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
+              <li>Contabilidad Administrativa</li>
+              <li>Administraci&oacute;n I</li>
+              <li>Matem&aacute;ticas I</li>
             </ul>
           </div>
          </div>
@@ -133,19 +117,12 @@ Matemáticas II
           </button>
           <div id="collapse3" class="collapse">
             <ul>
-              <li>Derecho Constitucional</li>
-              <li>Teor&iacute;a de la Comunicaci&oacute;n Oral y Escrita</li>
-              <li>Teor&iacute;a de la Ley Penal</li>
-              <li>Teor&iacute;a del Proceso</li>
-              <li>Derecho Administrativo</li>
-              <li>Bienes y Derechos Reales</li>
               <li>Ingl&eacute;s III</li>
-              Inglés III
-Contabilidad Financiera
-Taller de Comunicación Oral y Escrita
-Fundamentos de Derecho
-Toma de Decisiones no Programadas
-Macroeconomía
+              <li>Contabilidad Financiera</li>
+              <li>Taller de Comunicaci&oacute;n Oral y Escrita</li>
+              <li>Fundamentos de Derecho</li>
+              <li>Toma de Decisiones no Programadas</li>
+              <li>Macroeconom&iacute;a</li>
             </ul>
           </div>
          </div>
@@ -156,19 +133,12 @@ Macroeconomía
           </button>
           <div id="collapse4" class="collapse">
             <ul>
-              <li>Derecho Mercantil</li>
-              <li>Derecho Constitucional</li>
-              <li>Obligaciones</li>
-              <li>Derecho Administrativo</li>
               <li>Inform&aacute;tica</li>
-              <li>Sistemas Jur&iacute;dicos</li>
+              <li>Desarrollo Organizacional</li>
               <li>Ingl&eacute;s IV</li>
-              Informática
-Desarrollo Organizacional
-Inglés IV
-Sistemas de Calidad
-Estadística I
-Derecho Mercantil
+              <li>Sistemas de Calidad</li>
+              <li>Estad&iacute;stica I</li>
+              <li>Derecho Mercantil</li>
             </ul>
           </div>
          </div>
@@ -179,19 +149,12 @@ Derecho Mercantil
           </button>
           <div id="collapse5" class="collapse">
             <ul>
-              <li>Garant&iacute;as Constitucionales</li>
-              <li>T&iacute;tulos y Operaciones de Cr&eacute;dito</li>
-              <li>Contratos Civiles</li>
+              <li>Contabilidad de Costos</li>
+              <li>Principios de Presupuestos</li>
               <li>Derecho Laboral</li>
-              <li>Derecho Internacional P&uacute;blico</li>
-              <li>Derecho Procesal Civil</li>
+              <li>Organizaci&oacute;n Empresarial</li>
+              <li>Finanzas</li>
               <li>Ingl&eacute;s V</li>
-              Contabilidad de Costos
-Principios de Presupuestos
-Derecho Laboral
-Organización Empresarial
-Finanzas
-Inglés V
             </ul>
           </div>
          </div>
@@ -202,19 +165,12 @@ Inglés V
           </button>
           <div id="collapse6" class="collapse">
             <ul>
-              <li>Derecho Procesal Penal</li>
-              <li>Estado y Sociedad</li>
-              <li>Familia y Sucesiones</li>
-              <li>Derecho Bancario y Burs&aacute;til</li>
-              <li>Derecho Agrario</li>
-              <li>Legislaci&oacute;n Fiscal I</li>
-              <li>Derecho Comercial Internacional</li>
-              Administración de Recursos Humanos
-Finanzas Nacionales
-Políticas Arancelarias
-Relaciones Empresariales
-Investigación de Mercados
-Derecho Fiscal
+              <li>Administraci&oacute;n de Recursos Humanos</li>
+              <li>Finanzas Nacionales</li>
+              <li>Pol&iacute;ticas Arancelarias</li>
+              <li>Relaciones Empresariales</li>
+              <li>Investigación de Mercados</li>
+              <li>Derecho Fiscal</li>
             </ul>
           </div>
          </div>
@@ -224,20 +180,12 @@ Derecho Fiscal
             </button>
             <div id="collapse7" class="collapse">
               <ul>
-                <li>Sociedad del Tercer Milenio</li>
-                <li>Legislaci&oacute;n Fiscal II</li>
-                <li>T&oacute;picos de Derecho Mercantil</li>
-                <li>Derecho Internacional Privado</li>
-                <li>Derecho Econ&oacute;mico</li>
-                <li>Derecho Laboral Internacional</li>
-                <li>Amparo</li>
-                <li>Derecho Ambiental</li>
-                Finanzas Internacionales
-Administración de Empresas
-Microempresas
-Perspectiva Humanística
-Desarrollo de Proyectos
-Liderazgo Empresarial
+                <li>Finanzas Internacionales</li>
+                <li>Administración de Empresas</li>
+                <li>Microempresas</li>
+                <li>Perspectiva Human&iacute;stica</li>
+                <li>Desarrollo de Proyectos</li>
+                <li>Liderazgo Empresarial</li>
               </ul>
             </div>
            </div>
@@ -248,19 +196,12 @@ Liderazgo Empresarial
             </button>
             <div id="collapse8" class="collapse">
               <ul>
+                <li>Administraci&oacute;n de Proyectos</li>
                 <li>Seminario de Investigaci&oacute;n I</li>
-                <li>Derecho Electoral</li>
-                <li>T&oacute;picos de Derecho Mercantil</li>
-                <li>Derecho Internacional Privado II</li>
-                <li>Legislaci&oacute;n Aduanera</li>
-                <li>Derecho Comparado</li>
-                <li>Derecho Burocr&aacute;tico</li>
-                Administración de Proyectos
-Seminario de Investigación I
-Internet y Comercio
-Soluciones Integrales Financieras
-Auditoría
-Mercadotecnia
+                <li>Internet y Comercio</li>
+                <li>Soluciones Integrales Financieras</li>
+                <li>Auditor&iacute;a</li>
+                <li>Mercadotecnia</li>
               </ul>
             </div>
            </div>
@@ -272,18 +213,11 @@ Mercadotecnia
             <div id="collapse9" class="collapse">
               <ul>
                 <li>Seminario de Investigaci&oacute;n II</li>
+                <li>Consultor&iacute;a Empresarial</li>
                 <li>Valores en la Profesi&oacute;n</li>
-                <li>Filosof&iacute;a del Derecho</li>
+                <li>Psicolog&iacute;a Industrial</li>
                 <li>Seguridad Social</li>
-                <li>Propiedad Intelectual</li>
-                <li>Temas Selectos de la Legislaci&oacute;n de Nuevo Le&oacute;n</li>
-                <li>Derecho Empresarial</li>
-                Seminario de Investigación II
-Consultoría Empresarial
-Valores en la Profesión
-Psicología Industrial
-Seguridad Social
-Evaluación de Proyectos
+                <li>Evaluaci&oacute;n de Proyectos</li>
               </ul>
             </div>
            </div>
