--- a/oferta-educativa/lcp.html
+++ b/oferta-educativa/lcp.html
@@ -22,10 +22,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="../assets/img/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="../assets/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
-  <link rel="manifest" href="../manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -87,20 +85,13 @@
           </button>
           <div id="collapse1" class="collapse">
             <ul>
-              <li>Sociolog&iacute;a Jur&iacute;dica</li>
-              <li>Teor&iacute;a del Estado</li>
+              <li>Empresa y Contexto Mundial</li>
               <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
-              <li>Fundamentos del Derecho</li>
-              <li>Historia del Derecho</li>
-              <li>Derecho Romano I</li>
               <li>Ingl&eacute;s I</li>
-              Empresa y Contexto Mundial
-Metodología de la Investigación
-Inglés I
-Contabilidad General
-Administración I
-Matemáticas I
-Fundamentos de Derecho
+              <li>Contabilidad General</li>
+              <li>Administraci&oacute;n I</li>
+              <li>Matem&aacute;ticas I</li>
+              <li>Fundamentos de Derecho</li>
             </ul>    
           </div>
          </div>
@@ -111,20 +102,12 @@ Fundamentos de Derecho
           </button>
           <div id="collapse2" class="collapse">
             <ul>
-              <li>Metodolog&iacute;a Jur&iacute;dica</li>
-              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
-              <li>Teor&iacute;a del Derecho</li>
-              <li>Acto Jur&iacute;dico y Personal</li>
-              <li>Derecho Romano II</li>
-              <li>Teor&iacute;a de la Constituci&oacute;n</li>
+              <li>Microeconom&iacute;a</li>
               <li>Ingl&eacute;s II</li>
-              Microeconomía
-Inglés II
-Teoría de la Comunicación
-Contabilidad Administrativa
-Administración II
-Matemáticas II
-Derecho Mercantil
+              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
+              <li>Administraci&oacute;n II</li>
+              <li>Matem&aacute;ticas II</li>
+              <li>Derecho Mercantil</li>
             </ul>
           </div>
          </div>
@@ -135,20 +118,13 @@ Derecho Mercantil
           </button>
           <div id="collapse3" class="collapse">
             <ul>
-              <li>Derecho Constitucional</li>
-              <li>Teor&iacute;a de la Comunicaci&oacute;n Oral y Escrita</li>
-              <li>Teor&iacute;a de la Ley Penal</li>
-              <li>Teor&iacute;a del Proceso</li>
-              <li>Derecho Administrativo</li>
-              <li>Bienes y Derechos Reales</li>
+              <li>Macroeconom&iacute;a</li>
               <li>Ingl&eacute;s III</li>
-              Macroeconomía
-Inglés III
-Taller de la Comunicación Oral y Escrita
-Contabilidad Financiera
-Sistema de Toma de Decisiones         
-Estadística I
-Derecho Administrativo
+              <li>Taller de la Comunicaci&oacute;n Oral y Escrita</li>
+              <li>Contabilidad Financiera</li>
+              <li>Sistema de Toma de Decisiones</li>
+              <li>Estad&iacute;stica I</li>
+              <li>Derecho Administrativo</li>
             </ul>
           </div>
          </div>
@@ -159,21 +135,14 @@ Derecho Administrativo
           </button>
           <div id="collapse4" class="collapse">
             <ul>
-              <li>Derecho Mercantil</li>
-              <li>Derecho Constitucional</li>
-              <li>Obligaciones</li>
-              <li>Derecho Administrativo</li>
-              <li>Inform&aacute;tica</li>
-              <li>Sistemas Jur&iacute;dicos</li>
               <li>Ingl&eacute;s IV</li>
+              <li>Inform&aacute;tica</li>
+              <li>M&eacute;todos Cuantitativos de Toma de Decisiones</li>
+              <li>Sistemas de Calidad</li>
+              <li>Estad&iacute;stica II</li>
+              <li>Contabilidad de Costos I</li>
+              <li>Contabilidad Intermedia I</li>
             </ul>
-            Inglés IV
-Informática
-Métodos Cuantitativos de Toma de Decisiones
-Sistemas de Calidad
-Estadística II
-Contabilidad de Costos I
-Contabilidad Intermedia I
           </div>
          </div>
          
@@ -183,21 +152,14 @@ Contabilidad Intermedia I
           </button>
           <div id="collapse5" class="collapse">
             <ul>
-              <li>Garant&iacute;as Constitucionales</li>
-              <li>T&iacute;tulos y Operaciones de Cr&eacute;dito</li>
-              <li>Contratos Civiles</li>
-              <li>Derecho Laboral</li>
-              <li>Derecho Internacional P&uacute;blico</li>
-              <li>Derecho Procesal Civil</li>
               <li>Ingl&eacute;s V</li>
+              <li>Contabilidad de Costos II</li>
+              <li>Contabilidad Intermedia II</li>
+              <li>Derecho Laboral</li>
+              <li>Investigaci&oacute;n de Operacines</li>
+              <li>Finanzas</li>
+              <li>Auditor&iacute;a I</li>
             </ul>
-            Inglés V
-Contabilidad de Costos II
-Contabilidad Intermedia II
-Derecho Laboral
-Investigación de Operaciones
-Finanzas
-Auditoría I
           </div>
          </div>
 
@@ -207,21 +169,14 @@ Auditoría I
           </button>
           <div id="collapse6" class="collapse">
             <ul>
-              <li>Derecho Procesal Penal</li>
               <li>Estado y Sociedad</li>
-              <li>Familia y Sucesiones</li>
-              <li>Derecho Bancario y Burs&aacute;til</li>
-              <li>Derecho Agrario</li>
+              <li>Contabilidad Superior</li>              
+              <li>Ingl&eacute;s para Negocios</li>
+              <li>An&aacute;lisis e Interpretaci&oacute;n de la Informaci&oacute;n</li>
+              <li>Auditor&iacute;a II</li>
               <li>Legislaci&oacute;n Fiscal I</li>
-              <li>Derecho Comercial Internacional</li>
+              <li>Finanzas Corporativas</li>
             </ul>
-            Estado y Sociedad
-Contabilidad Superior
-Inglés para Negocios
-Análisis e Interpretación de la Información
-Auditoría II
-Legislación Fiscal I
-Finanzas Corporativas
           </div>
          </div>
          <div class="col-12 col-lg-4">
@@ -232,19 +187,11 @@ Finanzas Corporativas
               <ul>
                 <li>Sociedad del Tercer Milenio</li>
                 <li>Legislaci&oacute;n Fiscal II</li>
-                <li>T&oacute;picos de Derecho Mercantil</li>
-                <li>Derecho Internacional Privado</li>
-                <li>Derecho Econ&oacute;mico</li>
-                <li>Derecho Laboral Internacional</li>
-                <li>Amparo</li>
-                <li>Derecho Ambiental</li>
-                Sociedad del Tercer Milenio
-Legislación Fiscal  II
-Análisis e Interpretación de la Información Financiera
-Auditoría III
-Consolidación de la Información Financiera
-Contabilidad de Sociedades I
-Finanzas Internacionales
+                <li>An&aacute;lisis e Interpretaci&oacute;n de la Informaci&oacute;n</li>
+                <li>Auditor&iacute;a III</li>
+                <li>Consolidaci&oacute;n de la Informaci&oacute;n Financiera</li>
+                <li>Contabilidad de Sociedades I</li>
+                <li>Finanzas Internacionales</li>
               </ul>
             </div>
            </div>
@@ -256,19 +203,12 @@ Finanzas Internacionales
             <div id="collapse8" class="collapse">
               <ul>
                 <li>Seminario de Investigaci&oacute;n I</li>
-                <li>Derecho Electoral</li>
-                <li>T&oacute;picos de Derecho Mercantil</li>
-                <li>Derecho Internacional Privado II</li>
+                <li>Auditor&iacute;a IV</li>
+                <li>Mercados e Instituciones Financieras</li>
+                <li>Contabilidad de Sociedades II</li>
                 <li>Legislaci&oacute;n Aduanera</li>
-                <li>Derecho Comparado</li>
-                <li>Derecho Burocr&aacute;tico</li>
-                Seminario de Investigación I
-Auditoría IV
-Mercados e Instituciones Financieras
-Contabilidad de Sociedades II
-Legislación Aduanera
-Principios de Presupuesto
-Impuestos
+                <li>Principios de Presupuesto</li>
+                <li>Impuestos</li>
               </ul>
             </div>
            </div>
@@ -279,20 +219,13 @@ Impuestos
             </button>
             <div id="collapse9" class="collapse">
               <ul>
-                <li>Seminario de Investigaci&oacute;n II</li>
                 <li>Valores en la Profesi&oacute;n</li>
-                <li>Filosof&iacute;a del Derecho</li>
-                <li>Seguridad Social</li>
-                <li>Propiedad Intelectual</li>
-                <li>Temas Selectos de la Legislaci&oacute;n de Nuevo Le&oacute;n</li>
-                <li>Derecho Empresarial</li>
-                Valores en la Profesión
-Seminario de Emprendedores
-Seminario de Investigación II
-Finanzas Públicas
-Contraloría Pública
-Estudios Contables de los Impuestos
-Contabilidad Internacional
+                <li>Seminario de Emprendedores</li>                
+                <li>Seminario de Investigaci&oacute;n II</li>
+                <li>Finanzas Pú&uacute;licas</li>
+                <li>Contralor&iacute;a P&uacute;blica</li>
+                <li>Estudios Contables de los Impuestos</li>
+                <li>Contabilidad Internacional</li>
               </ul>
             </div>
            </div>
